--- a/z1.html
+++ b/z1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lanh = "en">
+<html lang = "en">
  <head>
     <meta charset="utf-8">
     <meta name = "viewport" content = "width-device-width, initial-scale=1.0">  
@@ -7,9 +7,6 @@
   <style>
     td {
         vertical-align: top;
-    }
-    .bottom-aligned {
-        vertical-align: bottom;
     }
   </style>
   <style>
@@ -24,9 +21,10 @@
    <tr>
     <td>Ut aliquip ex ea commodo.</td>
     <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</td>
-   </tr>
-    <td class="bottom-aligned" colspan=”2”>Lobortis nisl. </td>
-    <td class="bottom-aligned" colspan=”2”>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</td>
+   </tr> 
+   <tr>
+    <td>Lobortis nisl. </td>
+    <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</td>
    </tr>
   </table>
  </body>
