--- a/z3.html
+++ b/z3.html
@@ -12,7 +12,7 @@
         <h2>Algorithmic Oriented Language.</h2>
         </div>
         <div>
-        <h2><p>Creates new project</p></h2>
+        <h2>Creates new project</h2>
        
         </div>
     </body>
